log
Wed 20 Mar 2024 01:59:52 PM UTC: 
 tests:  0|5
total_score: 0/70
737f50a
Wed 20 Mar 2024 02:13:31 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:14: error: expected expression before ‘List’
   50 |     pushBack(List *L, int i);
      |              ^~~~
exercises.c:50:5: error: too few arguments to function ‘pushBack’
   50 |     pushBack(List *L, int i);
      |     ^~~~~~~~
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:6: note: declared here
   20 | void pushBack(List *L, void *dato);
      |      ^~~~~~~~
In file included from test.c:5:
exercises.c:49:10: error: unused variable ‘i’ [-Werror=unused-variable]
   49 |     int* i = (int *)malloc(sizeof(int));
      |          ^
cc1: all warnings being treated as errors
Compilation failed
490c63d
Wed 20 Mar 2024 02:14:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:14: error: expected expression before ‘List’
   50 |     pushBack(List L, int i);
      |              ^~~~
exercises.c:50:5: error: too few arguments to function ‘pushBack’
   50 |     pushBack(List L, int i);
      |     ^~~~~~~~
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:6: note: declared here
   20 | void pushBack(List *L, void *dato);
      |      ^~~~~~~~
In file included from test.c:5:
exercises.c:49:10: error: unused variable ‘i’ [-Werror=unused-variable]
   49 |     int* i = (int *)malloc(sizeof(int));
      |          ^
cc1: all warnings being treated as errors
Compilation failed
be86fbc
Wed 20 Mar 2024 02:14:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:18: error: expected expression before ‘int’
   50 |     pushBack( L, int i);
      |                  ^~~
exercises.c:49:10: error: unused variable ‘i’ [-Werror=unused-variable]
   49 |     int* i = (int *)malloc(sizeof(int));
      |          ^
cc1: all warnings being treated as errors
Compilation failed
c5cd209
Wed 20 Mar 2024 02:23:49 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:18: error: expected expression before ‘int’
   51 |     pushBack( L, int i);
      |                  ^~~
Compilation failed
9afe45e
Wed 20 Mar 2024 02:24:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
f9989b3
Wed 20 Mar 2024 02:40:36 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
ad91610
